# cli_tools

./: CMakeLists.txt  CMakePresets.json  README.md
cli_parser/: CMakeLists.txt  cli_parser.cpp  cli_parser.h  cli_parser_test.cpp
cli_parser/include/: cli_parser.h
cli_parser/src/: cli_parser.cpp
test/: CMakeLists.txt  cli_parser_test.cpp
